# shared_allocator

./: CMakeLists.txt  LICENSE  README.md
include/shared_allocator/: cached_allocator.hpp  shared_allocator.hpp  size_cached_allocator.hpp
source/: shared_allocator.cpp
test/: CMakeLists.txt  main.cpp
